Corrected comment fab spacing

--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -398,7 +398,16 @@ $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 	.commentActionsDiv p {
 		margin-bottom: 0;
 	}
-	@include media-breakpoint-down(sm) {
+	.q-fab__actions--left {
+		right: calculate-rem(39px);
+	}
+	.q-fab__actions--right {
+		left: calculate-rem(48px);
+	}
+	.q-fab__actions--left {
+		right: calculate-rem(42px);
+	}
+	@include media-breakpoint-down(md) {
 		.q-message-sent .q-message-text:last-child:before {
 			display: none;
 		}
@@ -411,12 +420,12 @@ $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 				min-height: unset;
 			}
 		}
-	}
-	.q-fab__actions--left {
-		right: 95%;
-	}
-	.q-fab__actions--right {
-		left: 95%;
+		.q-fab__actions--left {
+			right: calculate-rem(39px);
+		}
+		.q-fab__actions--right {
+			left: calculate-rem(43px);
+		}
 	}
 }
 
